adjust hint on mobile to prevent text overlap

--- a/app/assets/stylesheets/_hint.scss
+++ b/app/assets/stylesheets/_hint.scss
@@ -15,6 +15,7 @@
 
   .title {
     margin-bottom: .2em;
+    margin-right: 10rem;
     font-size: $fs-small;
     font-weight: $fw-bold;
   }
